@@ -1,5 +1,6 @@
 == master
 
+* Add security documentation around mass-assignment in ORM integrations
 * Fix event attribute transitions being publicly accessible
 
 == 0.7.1 / 2009-04-05
